# centrifugo-cluster-demo

./: .gitignore  Dockerfile  EMULATOR_README.md  PROJECT_SUMMARY.md  README.md  TYPESCRIPT_IMPLEMENTATION.md  diagnostic_run.sh  docker-compose.yml  inspect_stack.sh  logs_emulator.sh  pyproject.toml  run_emulator.py  run_typescript_emulator.sh  start_emulator.sh  status_emulator.sh  stop_emulator.sh  test_emulator.http  test_simultaneous_start.py
centrifugo/: config.json  config_node1.json  config_node2.json
emulator/: config.py  emulator_client.py  llm_emulator.py  server.py  statistics.py
haproxy/: haproxy.cfg
redis/: redis.conf
typescript-client/: .gitignore  README.md  package.json  tsconfig.json
typescript-client/src/: client.ts  config.ts  logger.ts  main.ts  orchestrator.ts  statistics.ts
